--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Neue";
+  src: url("/fonts/TT Firs Neue Bold Outline Trial Italic.otf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
