--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,14 @@
   animation: scrollRight 10s linear infinite;
   bottom: 10%;
 }
+
+.circle-text {
+  position: absolute;
+  transform-origin: 0 100px; /* Adjust the radius accordingly */
+}
+
+.text-circle {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
