--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,4 @@
   bottom: 10%;
 }
 
-.circle-text {
-  position: absolute;
-  transform-origin: 0 100px; /* Adjust the radius accordingly */
-}
-
-.text-circle {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
+/*  */
